--- a/assignments_fall2018/assignment1_pandas_olympic.ipynb
+++ b/assignments_fall2018/assignment1_pandas_olympic.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "1.5"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -335,14 +335,14 @@
        "Name: Height, dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data[(data['Year'] == 2000) & (data['Sex'] == 'F') & (data['Sport'] == 'Basketball')] \\\n",
-    ".drop_duplicates(subset=['Name'], keep = 'first')['Height'] \\\n",
+    ".drop_duplicates(subset=['ID'], keep = 'first')['Height'] \\\n",
     ".describe()[['mean','std']].round(1)"
    ]
   },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "True"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,8 +475,10 @@
    "source": [
     "data1 = data[(data['Year'] == 2016) & (data['Team'].isin(['Switzerland', 'Serbia']))] \\\n",
     ".dropna(subset=['Medal']) \\\n",
-    ".groupby(['Team'])['Team'].count();\n",
-    "data1['Switzerland'] < data1['Serbia']\n"
+    ".groupby(['Team','Event'])['Event'] \\\n",
+    ".nunique();\n",
+    "\n",
+    "data1['Switzerland'].count() < data1['Serbia'].count()\n"
    ]
   },
   {
@@ -492,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -500,14 +502,14 @@
       "text/plain": [
        "age_category\n",
        "< 15 & >= 55       1\n",
-       "[15-25)         2027\n",
-       "[25-35)         2594\n",
-       "[35-45)          265\n",
+       "[15-25)         1193\n",
+       "[25-35)         1397\n",
+       "[35-45)          150\n",
        "[45-55)            4\n",
        "Name: age_category, dtype: int64"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,8 +525,12 @@
     "    elif (45.0 <= age < 55.0):\n",
     "        return '[45-55)'\n",
     "    return '< 15 & >= 55';\n",
+    "\n",
     "data['age_category'] = data['Age'].apply(age_category)\n",
-    "data[data['Year'] == 2014].groupby(['age_category'])['age_category'].count()\n"
+    "\n",
+    "data[data['Year'] == 2014] \\\n",
+    ".drop_duplicates(subset=['ID'], keep = 'first') \\\n",
+    ".groupby(['age_category'])['age_category'].count()\n"
    ]
   },
   {
@@ -574,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +589,7 @@
        "34"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,6 +598,13 @@
     "abs(data[data['Year'] == 1995]['Sport'].drop_duplicates().count() \\\n",
     "- data[data['Year'] == 2016]['Sport'].drop_duplicates().count())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
